--- a/app/src/main/res/layout/activity_introduccion.xml
+++ b/app/src/main/res/layout/activity_introduccion.xml
@@ -100,6 +100,15 @@
                 android:layout_marginRight="10dp"
                 android:text="Multiplicacion" />
 
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:text="Fin del viaje" />
+
 
         </LinearLayout>
     </ScrollView>
