--- a/app/src/main/res/layout/activity_introduccion.xml
+++ b/app/src/main/res/layout/activity_introduccion.xml
@@ -112,6 +112,16 @@
                 android:background="#48d1cc"
                 android:text="Fin del viaje" />
 
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:background="#48d1cc"
+                android:text="Resultados" />
+
 
         </LinearLayout>
     </ScrollView>
